--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="container">
         <h2 class="section-title section-title--keycolor section-title--story">ストーリー</h2>
         <div class="story">
-          <p class="text-center">私の名前は柚木、
+          <p class="text-center">私の名前は柚木、<br>
 各地で巻き起こる原因不明の天災、黒嵐の研究家をやっている。
 国嵐は広範囲にわたる災害で、気温の急上昇や低下、局地的な竜巻が多数起こり、
 体が黒く硬くなる有害物質が長期に渡り蔓延する。
