--- a/index.html
+++ b/index.html
@@ -30,26 +30,26 @@
         <h2 class="section-title section-title--keycolor section-title--story">ストーリー</h2>
         <div class="story">
           <p class="text-center">私の名前は柚木、<br>
-各地で巻き起こる原因不明の天災、黒嵐の研究家をやっている。
-国嵐は広範囲にわたる災害で、気温の急上昇や低下、局地的な竜巻が多数起こり、
-体が黒く硬くなる有害物質が長期に渡り蔓延する。
-電波も届かなくなり、外部との連絡が途絶える
-
-
-この度、私はある依頼を受けた。　
-その依頼は、国嵐で特に大きな被害を受け、大勢の人が亡くなった大災害、
-その災禍の中心部に位置していた災害研究所の調査というものであり、
-その研究室はかつて亡き研究の相方の岸田博士と、私が勤めていた場所であった。
-
-大災害が起きた五年前のあの日、私は出張でその場にはたまたまおらず、一命を取り止めた。
-しかし、博士はその災禍の渦中にいた。
-彼は研究所の実験用の転送装置を使い、多くの市民を避難させたが、
-あまりの負荷に転送装置が故障してしまい、その被災地に取り残さてしまった。
-その結果として彼は死ぬ間際まで研究を続けた。
-
-本来避難するであろう環境下での研究成果はとても貴重で、
-多くの情報が得られるであろうという事で今回、
-ようやく調査ドローンを送り出すことができるという。
+各地で巻き起こる原因不明の天災、黒嵐の研究家をやっている。<br>
+国嵐は広範囲にわたる災害で、気温の急上昇や低下、局地的な竜巻が多数起こり、<br>
+体が黒く硬くなる有害物質が長期に渡り蔓延する。<br>
+電波も届かなくなり、外部との連絡が途絶える<br>
+<br>
+<br>
+この度、私はある依頼を受けた。<br>
+その依頼は、国嵐で特に大きな被害を受け、大勢の人が亡くなった大災害、<br>
+その災禍の中心部に位置していた災害研究所の調査というものであり、<br>
+その研究室はかつて亡き研究の相方の岸田博士と、私が勤めていた場所であった。<br>
+<br>
+大災害が起きた五年前のあの日、私は出張でその場にはたまたまおらず、一命を取り止めた。<br>
+しかし、博士はその災禍の渦中にいた。<br>
+彼は研究所の実験用の転送装置を使い、多くの市民を避難させたが、<br>
+あまりの負荷に転送装置が故障してしまい、その被災地に取り残さてしまった。<br>
+その結果として彼は死ぬ間際まで研究を続けた。<br>
+<br>
+本来避難するであろう環境下での研究成果はとても貴重で、<br>
+多くの情報が得られるであろうという事で今回、<br>
+ようやく調査ドローンを送り出すことができるという。<br>
 それでかつて共に研究をしていた私が、ドローンの操縦員として選ばれた。</p>
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
