--- a/index.html
+++ b/index.html
@@ -29,28 +29,20 @@
       <div class="container">
         <h2 class="section-title section-title--keycolor section-title--story">ストーリー</h2>
         <div class="story">
-          <p class="text-center">私の名前は柚木、<br>
-各地で巻き起こる原因不明の天災、黒嵐の研究家をやっている。<br>
-国嵐は広範囲にわたる災害で、気温の急上昇や低下、局地的な竜巻が多数起こり、<br>
-体が黒く硬くなる有害物質が長期に渡り蔓延する。<br>
-電波も届かなくなり、外部との連絡が途絶える<br>
+          <p class="text-center">貴方は世界各地で巻き起こる原因不明の天災，黒嵐の研究をしている研究者です。<br>
+黒嵐は広範囲にわたる災害で、気温の急上昇や低下や局地的な竜巻が多数起こる。<br>
+さらに、身体が黒く硬くなっていき、死に至らせる病気の原因である、有害物質を長期に渡り蔓延させる。<br>
+電波も届かなくなってしまい、外部との連絡が一切取れなくなってしまうものである。<br>
 <br>
 <br>
-この度、私はある依頼を受けた。<br>
-その依頼は、国嵐で特に大きな被害を受け、大勢の人が亡くなった大災害、<br>
-その災禍の中心部に位置していた災害研究所の調査というものであり、<br>
-その研究室はかつて亡き研究の相方の岸田博士と、私が勤めていた場所であった。<br>
+そんな天災の研究をしている貴方にある依頼が来ました。<br>
+その依頼内容は、黒嵐で特に大きな被害を受け、大勢の人が亡くなった街の調査である。<br>
+街にはかつてあなたの相方であった博士と共に黒嵐の研究をしていた研究所があった。<br>
 <br>
-大災害が起きた五年前のあの日、私は出張でその場にはたまたまおらず、一命を取り止めた。<br>
-しかし、博士はその災禍の渦中にいた。<br>
-彼は研究所の実験用の転送装置を使い、多くの市民を避難させたが、<br>
-あまりの負荷に転送装置が故障してしまい、その被災地に取り残さてしまった。<br>
-その結果として彼は死ぬ間際まで研究を続けた。<br>
 <br>
-本来避難するであろう環境下での研究成果はとても貴重で、<br>
-多くの情報が得られるであろうという事で今回、<br>
-ようやく調査ドローンを送り出すことができるという。<br>
-それでかつて共に研究をしていた私が、ドローンの操縦員として選ばれた。</p>
+災害が起きたあの日、貴方は奇跡的にも出張であの場にはおらず、一命を取り留めました。<br>
+その研究所にある黒嵐の研究成果はとても貴重で、研究の躍進が期待された。<br>
+それで今回、黒嵐内でも操作が出来るドローンで調査に送り出すことになり、その操縦を貴方に任されました。</p>
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
               <li>今、これを読んだ生徒会メンバー以外を呼んではいけない</li>
