--- a/index.html
+++ b/index.html
@@ -45,12 +45,10 @@
 それで今回、黒嵐内でも操作が出来るドローンで調査に送り出すことになり、その操縦を貴方に任されました。</p>
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
-              <li>今、これを読んだ生徒会メンバー以外を呼んではいけない</li>
-              <li>30分を超えるとS先生は出てこられない</li>
+              <li>行きと帰りのことを考慮するとドローンの充電は30分しか持たない</li>
             </ul>
           </div>
-          <p class="text-center">いつの間にか、タイマーが起動した。29:58、29:57・・・急がなきゃ。<br>
-            まずはこの暗号を解かなくては！</p>
+          <p class="text-center">時間はいくらあっても足りない。今すぐ調査に行こう！</p>
         </div>
       </div>
     </section>
