--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
   </header>
   <main class="main main-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/______________________________。png" alt="Lost in the storm"></h1>
+    <h1 class="main-title"><img src="assets/images/ロススト　ヘッダー.png" alt="Lost in the storm"></h1>
     <!-- タイトルエリア　ここまで -->
     <div id="stage">
 
