--- a/main.html
+++ b/main.html
@@ -109,9 +109,9 @@ Youtube貼り付けここまで -->
           <div class="section">
             <div class="container">
               <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>研究所の入り口のロックを解除しよう！</h2>
-              <p class="text-center">研究所に着いたが入り口にロックがかかっていた。<br>
-よく見ると手掛かりになりそうな物を見つけた。<br>
-きっとこの謎を解くことでロックが解除されるはずだ！</p>
+              <p class="text-center">研究所内を探索をしていると博士のパソコンとノートを見つけた。<br>
+きっとこの中にデータが入っているはずだ。しかしロックがかかっている。<br>
+ノートに書かれていた暗号がヒントになっているはずだ！</p>
             </div>
           </div>
           <div class="stage-column__container section bg-color--keycolor">
@@ -183,8 +183,8 @@ Youtube貼り付けここまで -->
           <div class="container">
             <div class="clear-message">
               <div class="clear-message__title">STAGE：2　クリア！</div>
-              <div class="clear-message__content">入り口のロックが解除された。<br>
-                中に入ってデータを探そう！</div>
+              <div class="clear-message__content">パソコンのロックを解除してデータを入手することが出来た！<br>
+                なんだ外が少し騒がしくなってきたぞ まさか...</div>
                 <button v-on:click="nextStage('stage2')" onclick="location.href='#sectionStage3'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
