--- a/main.html
+++ b/main.html
@@ -200,9 +200,9 @@ Youtube貼り付けここまで -->
         <section class="section">
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>博士のパソコンの中身</h2>
-            <p class="text-center">探索をしていると博士のパソコンを見つけた。<br>
-きっとこの中にデータが入っているはずだ。しかしロックがかかっている。<br>
-ノートに書かれていた暗号がヒントになっているはずだ！</p>
+            <p class="text-center">外を見ると黒嵐が再び発生し始めていた。<br>
+せっかくデータを入手出来たのに... そうだここには脱出用の転送装置があったはずだ！<br>
+これだ！　くそっ電源が切れてる。　合言葉を言わなくては、</p>
             <figure class="image__container">
               <img src="assets/images/stage.png" alt="">
             </figure>
