--- a/main.html
+++ b/main.html
@@ -204,7 +204,7 @@ Youtube貼り付けここまで -->
 せっかくデータを入手出来たのに... そうだここには脱出用の転送装置があったはずだ！<br>
 これだ！　くそっ電源が切れてる。　合言葉を言わなくては、</p>
             <figure class="image__container">
-              <img src="assets/images/stage.png" alt="">
+              <img src="assets/images/謎転送装置.png" alt="">
             </figure>
           </div>
         </section>
