--- a/main.html
+++ b/main.html
@@ -42,7 +42,7 @@
   
             <div class="container">
               <figure class="image__container">
-                <img src="assets/images/イラスト.PNG" alt="">
+                <img src="assets/images/イラスト.png" alt="">
               </figure>
                 
  <!--  YouTube貼り付け
