--- a/final.html
+++ b/final.html
@@ -23,8 +23,9 @@
       <div class="container">
         <div class="box bg-color--subcolor">
           <h2 class="section-title--border">全ステージ クリア！</h2>
-          <p class="text-center">おめでとう！あなたはついに全ての謎を解き、先生を救うことができた！<br>
-            そして先生からあるメッセージが伝えられた・・・</p>
+          <p class="text-center">おめでとう！貴方はなんとか転送装置を無事起動させ脱出することが出来ました。<br>
+データも入手することができ、今回の依頼は達成です。<br>
+このデータはこれからの研究に必ず役に立つであろう。いずれこの天災も．．．</p>
         </div>
       </div>
     </section>
@@ -44,10 +45,9 @@ Youtube貼り付けここまで-->
           ß
       </div>
          -->
-        <p class="text-center">あなたはきっと、このメッセージをずっと忘れることはないだろう・・・。<br>
-          これからも家庭科室が封鎖されるようなことがあったら、<br>
-          この教訓をしっかり思い出してくれ。</p>
-        <p class="text-center">それでは、また会おう！</p>
+        <p class="text-center">彼のパソコンの側にあった小包は私の元に送られてきた。<br>
+中には綺麗な宝石で象られた指輪の片割れだった。<br>
+それは鈍い光を放っていた。</p>
       </div>
     </section>
     <section class="section bg-color--keycolor">
