--- a/hint2.html
+++ b/hint2.html
@@ -42,7 +42,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">テキストテキストテキストテキストテキスト</p>
+              <p class="card__content">見方を変えてみよう</p>
             </div>
               
  <!-- 2-2ヒント追加
@@ -69,7 +69,7 @@
 <!-- 2-2答え追加
             <div class="card">
               <h3 class="card__title">2-2答え<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">ううう</p>
+              <p class="card__content">1576</p>
             </div>
 2-2答え追加ここまで -->
               
