--- a/hint3.html
+++ b/hint3.html
@@ -42,7 +42,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">テキストテキストテキストテキストテキスト</p>
+              <p class="card__content">しんじだい　の始まり</p>
             </div>
               
  <!-- 3-2ヒント追加
@@ -69,7 +69,7 @@
  <!-- 3-2答え追加
             <div class="card">
               <h3 class="card__title">3-2答え<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">ううう</p>
+              <p class="card__content">しおどき</p>
             </div>
 3-2答え追加ここまで -->
               
