--- a/hint3.html
+++ b/hint3.html
@@ -63,7 +63,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">答え<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">えええ</p>
+              <p class="card__content">しおどき</p>
             </div>
 
  <!-- 3-2答え追加
